# deepagents-guide

./: .env.example  .gitignore  CHECKLOG.md  LICENSE  README.md  pyproject.toml
evals/: test_repo_ops_eval.py
scripts/: B10_support_triage_agent.py  B11_ops_infra_triage_agent.py  B12_cost_tracking.py  B2_advanced.py  B2_quickstart.py  B3_nemotron_deep_agent.py  B4_hardened_agent.py  B5_repo_ops_agent.py  B6_cross_thread_memory.py  B7_langsmith_trace.py  B7b_multi_agent_trace.py  B8_langsmith_eval.py  B8b_phoenix_eval.py  B9_cost_tracking.py  B9_pr_review_agent.py  B9_pr_review_agent_live.py
workspace/agent_memory/: AGENTS.md
workspace/live-pr-demo/: is_prime.py  test_is_prime.py
workspace/sample-repo/: calc.py  test_calc.py
workspace/support-docs/: missing_provider_package.md  openrouter_models.md  pythonpath_error.md  subagents_dict_spec.md
