[project]
name = "deepagents-guide"
version = "0.1.0"
description = "Hands-on guide for LangChain Deep Agents"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.12",
    "langchain>=1.3.12,<2.0.0",
    "langgraph>=1.2.8",
    "python-dotenv>=1.2.2",
    "langchain-openai>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openrouter>=0.2.6",
    "tavily-python>=0.7.26",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scripts"]
